# alg_robo_p2

./: README.md
catkin/: criticalArea.txt  hi.txt  hie.txt
catkin/devel/: .catkin  .rosinstall  setup.sh
catkin/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
catkin/devel/include/algp2_msgs/: Map2D.h
catkin/devel/lib/mapping/: mapper
catkin/devel/lib/pkgconfig/: algp2_msgs.pc  controller.pc  mapping.pc  planning.pc
catkin/devel/lib/planning/: global_planner  local_planner  simple_steering_pose
catkin/devel/lib/python2.7/dist-packages/algp2_msgs/msg/: _Map2D.py  __init__.py
catkin/devel/share/algp2_msgs/cmake/: algp2_msgs-msg-extras.cmake  algp2_msgs-msg-paths.cmake  algp2_msgsConfig.cmake
catkin/devel/share/common-lisp/ros/algp2_msgs/msg/: Map2D.lisp  _package.lisp  _package_Map2D.lisp  algp2_msgs-msg.asd
catkin/devel/share/controller/cmake/: controllerConfig.cmake
catkin/devel/share/mapping/cmake/: mappingConfig.cmake
catkin/devel/share/planning/cmake/: planningConfig.cmake
catkin/src/algp2_msgs/: CMakeLists.txt  package.xml
catkin/src/algp2_msgs/msg/: Map2D.msg
catkin/src/controller/: CMakeLists.txt
catkin/src/controller/launch/: block_world.launch
catkin/src/mapping/: CMakeLists.txt
catkin/src/mapping/launch/: common_costmap.yaml  local_costmap.yaml  mapper.launch  path_server.launch  path_server.launch~  stdr_server.launch
catkin/src/mapping/src/: Mapper.cpp  mapper.cpp
catkin/src/planning/: CMakeLists.txt  package.xml
catkin/src/planning/include/planning/: global_planner.h  local_planner.h
catkin/src/planning/src/: global_planner.cpp  global_planner_old.cpp  local_planner.cpp  simple_steering_pose.cpp
documents/maps/: README.md  block_world.yaml  blocked_world.yaml  neat_path.yaml
launch/: common_costmap.yaml  local_costmap.yaml
